Align items and import svg files correctly

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -9507,42 +9507,42 @@ video {
 }
 
 .scale-200 {
-  --tw-scale-x: 2;
-  --tw-scale-y: 2;
+  --tw-scale-x: 3;
+  --tw-scale-y: 3;
 }
 
 .hover\:scale-200:hover {
-  --tw-scale-x: 2;
-  --tw-scale-y: 2;
+  --tw-scale-x: 3;
+  --tw-scale-y: 3;
 }
 
 .focus\:scale-200:focus {
-  --tw-scale-x: 2;
-  --tw-scale-y: 2;
+  --tw-scale-x: 3;
+  --tw-scale-y: 3;
 }
 
 .scale-x-200 {
-  --tw-scale-x: 2;
+  --tw-scale-x: 3;
 }
 
 .scale-y-200 {
-  --tw-scale-y: 2;
+  --tw-scale-y: 3;
 }
 
 .hover\:scale-x-200:hover {
-  --tw-scale-x: 2;
+  --tw-scale-x: 3;
 }
 
 .hover\:scale-y-200:hover {
-  --tw-scale-y: 2;
+  --tw-scale-y: 3;
 }
 
 .focus\:scale-x-200:focus {
-  --tw-scale-x: 2;
+  --tw-scale-x: 3;
 }
 
 .focus\:scale-y-200:focus {
-  --tw-scale-y: 2;
+  --tw-scale-y: 3;
 }
 
 @keyframes spin {
@@ -38468,42 +38468,42 @@ video {
   }
 
   .sm\:scale-200 {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .sm\:hover\:scale-200:hover {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .sm\:focus\:scale-200:focus {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .sm\:scale-x-200 {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .sm\:scale-y-200 {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .sm\:hover\:scale-x-200:hover {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .sm\:hover\:scale-y-200:hover {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .sm\:focus\:scale-x-200:focus {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .sm\:focus\:scale-y-200:focus {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .sm\:animate-none {
@@ -67355,42 +67355,42 @@ video {
   }
 
   .md\:scale-200 {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .md\:hover\:scale-200:hover {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .md\:focus\:scale-200:focus {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .md\:scale-x-200 {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .md\:scale-y-200 {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .md\:hover\:scale-x-200:hover {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .md\:hover\:scale-y-200:hover {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .md\:focus\:scale-x-200:focus {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .md\:focus\:scale-y-200:focus {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .md\:animate-none {
@@ -96242,42 +96242,42 @@ video {
   }
 
   .lg\:scale-200 {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .lg\:hover\:scale-200:hover {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .lg\:focus\:scale-200:focus {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .lg\:scale-x-200 {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .lg\:scale-y-200 {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .lg\:hover\:scale-x-200:hover {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .lg\:hover\:scale-y-200:hover {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .lg\:focus\:scale-x-200:focus {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .lg\:focus\:scale-y-200:focus {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .lg\:animate-none {
@@ -125129,42 +125129,42 @@ video {
   }
 
   .xl\:scale-200 {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .xl\:hover\:scale-200:hover {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .xl\:focus\:scale-200:focus {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .xl\:scale-x-200 {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .xl\:scale-y-200 {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .xl\:hover\:scale-x-200:hover {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .xl\:hover\:scale-y-200:hover {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .xl\:focus\:scale-x-200:focus {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .xl\:focus\:scale-y-200:focus {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .xl\:animate-none {
@@ -154016,42 +154016,42 @@ video {
   }
 
   .\32xl\:scale-200 {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .\32xl\:hover\:scale-200:hover {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .\32xl\:focus\:scale-200:focus {
-    --tw-scale-x: 2;
-    --tw-scale-y: 2;
+    --tw-scale-x: 3;
+    --tw-scale-y: 3;
   }
 
   .\32xl\:scale-x-200 {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .\32xl\:scale-y-200 {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .\32xl\:hover\:scale-x-200:hover {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .\32xl\:hover\:scale-y-200:hover {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .\32xl\:focus\:scale-x-200:focus {
-    --tw-scale-x: 2;
+    --tw-scale-x: 3;
   }
 
   .\32xl\:focus\:scale-y-200:focus {
-    --tw-scale-y: 2;
+    --tw-scale-y: 3;
   }
 
   .\32xl\:animate-none {
